--- a/frontend/pages/Signup.html
+++ b/frontend/pages/Signup.html
@@ -35,6 +35,8 @@
             }
         }
     </script>
+    <!-- Google Identity Services -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
 <body class="bg-slate-50 text-slate-900 font-sans antialiased">
@@ -80,6 +82,28 @@
                         </button>
                     </div>
                 </form>
+
+                <div class="mt-6">
+                    <div class="relative">
+                        <div class="absolute inset-0 flex items-center">
+                            <div class="w-full border-t border-slate-300"></div>
+                        </div>
+                        <div class="relative flex justify-center text-sm">
+                            <span class="px-2 bg-white text-slate-500">Or continue with</span>
+                        </div>
+                    </div>
+
+                    <div class="mt-6 flex justify-center">
+                        <div id="g_id_onload"
+                            data-client_id="385508168482-r8d4drqs1jtn24v8ik4t9h15jbk9ql2s.apps.googleusercontent.com"
+                            data-context="signup" data-ux_mode="popup" data-callback="handleGoogleLogin"
+                            data-auto_prompt="false">
+                        </div>
+                        <div class="g_id_signin" data-type="standard" data-shape="rectangular" data-theme="outline"
+                            data-text="signup_with" data-size="large" data-logo_alignment="left">
+                        </div>
+                    </div>
+                </div>
 
                 <div class="mt-6 text-center">
                     <p class="text-sm text-slate-500">Already have an account? <a href="Login.html"
