--- a/frontend/pages/Login.html
+++ b/frontend/pages/Login.html
@@ -36,8 +36,6 @@
             }
         }
     </script>
-    <!-- Google Identity Services -->
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
 <body class="bg-slate-50 text-slate-900 font-sans antialiased">
@@ -106,14 +104,11 @@
                     </div>
 
                     <div class="mt-6 flex justify-center">
-                        <div id="g_id_onload"
-                            data-client_id="385508168482-r8d4drqs1jtn24v8ik4t9h15jbk9ql2s.apps.googleusercontent.com"
-                            data-context="signin" data-ux_mode="popup" data-callback="handleGoogleLogin"
-                            data-auto_prompt="false">
-                        </div>
-                        <div class="g_id_signin" data-type="standard" data-shape="rectangular" data-theme="outline"
-                            data-text="signin_with" data-size="large" data-logo_alignment="left">
-                        </div>
+                        <button type="button"
+                            class="google-auth-btn w-full flex justify-center items-center gap-3 py-2 px-4 border border-slate-300 rounded-md shadow-sm text-sm font-medium text-slate-700 bg-white hover:bg-slate-50 hover:text-slate-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-slate-900 transition-colors">
+                            <span class="iconify text-[18px]" data-icon="flat-color-icons:google"></span>
+                            Sign in with Google
+                        </button>
                     </div>
                 </div>
 
